Agrego ubicacion y le pego una pulida al codigo